--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.servlet.contextPath=/INGSuite
-server.port=8080
+server.port=9090
 
 #spring.datasource.url = jdbc:mysql://13.233.244.181:3306/ingsuite?allowPublicKeyRetrieval=true&useSSL=false
 #spring.datasource.username = root
 #spring.datasource.password = H@ckath0n
 
-spring.datasource.url = jdbc:mysql://localhost:3306/ingsuite?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username =test
-spring.datasource.password =Test@123
+spring.datasource.url = jdbc:mysql://localhost:3306/ingdb?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username =inguser1
+spring.datasource.password =H@ckath0n
 
 
 
